[package]
name = "ribbon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-stream = "0.3.5"
axum = "0.7.2"
axum-server = "0.5.1"
bytes = "1.5.0"
clearscreen = { version = "2.0.1", features = ["windows-console"] }
dashmap = "5.5.3"
derived-deref = "2.1.0"
failure = "0.1.8"
futures = "0.3.30"
futures-core = "0.3.29"
futures-stream = "0.0.0"
futures-util = "0.3.29"
http = "1.0.0"
log = "0.4.20"
reqwest = "0.11.22"
serde = { version = "1.0.193", features = ["derive", "serde_derive"] }
serde_json = "1.0.113"
sha2 = "0.10.8"
tokio = {version = "1.35.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
tower = "0.4.13"
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-subscriber = { version = "0.3.18", features = ["tracing"] }
uuid = { version = "1.6.1", features = ["v4"] }
